style.css
html {
	scroll-behavior: smooth;
}

body {
	font-family: 'Montserrat', sans-serif;
}

nav {
	transition: 0.3s;
}

.transparent {
	background-color: transparent;
}

.jumbotron-fluid {
	background-image: url('images/index.png');
	background-position: center;
	background-size: cover;
	background-attachment: fixed;
	color: white;
	height: 80vh;
	width: auto;
	font-family: 'Montserrat' sans-serif;
}

.jumbotron-overlay {
	height: 100%;
	width: 100%;
	top: 0;
	background-color: rgba(0, 0, 0, 0.6);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.jumbotron-overlay h1 {
	font-size: 3rem;
	font-weight: 500;
	text-shadow: 0 0 1rem rgba(255, 255, 255, 0.2);
}

.intro {
	font-weight: 400;
	font-size: 1.2rem;
	letter-spacing: 0.2rem;
	text-transform: uppercase;
	text-shadow: 0 0 1rem rgba(255, 255, 255, 0.9);
}

.avatar {
	background-color: transparent;
	height: 10rem;
	width: 10rem;
	border-radius: 50%;
	margin-bottom: 2rem;
}

.avatar img {
	border-radius: 50%;
}

.btn {
	border-radius: 2rem;
}

.icons-main-div {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	margin: 2rem 0rem 0rem 0rem;
}

.icon-div {
	height: 3rem;
	width: 3rem;
	border-radius: 50%;
	background-color: rgb(100, 100, 100);
	display: flex;
	align-items: center;
	justify-content: center;
	margin: 0rem 0.2rem;
	box-shadow: 0rem 0rem 1rem 0.5rem rgba(0, 0, 0, 0.1);
	transition: 0.4s;
}

.icon-div:hover {
	background-color: rgb(40, 167, 70);
	transform: scale(1.2);
	box-shadow: 0rem 0rem 1rem 0.5rem rgba(0, 0, 0, 0.3);
}

.apply-shadow {
	box-shadow: 0rem 0rem 2rem 1rem rgba(0, 0, 0, 0.1);
}

.about {
	padding: 3rem;
	border-radius: 1rem;
	margin-top: 4rem;
}

.triggered {
	transform: scale(1);
}

.info-head {
	margin: 2rem 0rem;
}

.info-cat {
	font-size: 1.1rem;
	font-weight: bold;
}

.info-cat-content {
	font-size: 1.1rem;
}

.heading {
	margin: 4rem 0rem;
}

.skills-heading {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	margin-top: 0.5rem;
	font-size: medium;
}

.skills-heading p {
	color: rgb(40, 167, 70);
	font-size: medium;
}

.skills {
	padding: 3rem;
	border-radius: 1rem;
}

.progress {
	height: 0.3rem;
}

.text-white {
	color: white;
}

.projects {
	margin: 3rem 0rem;
}

.projects h3 {
	margin: 4rem 0rem;
}

.project-div {
	margin-top: 1rem;
	margin-bottom: 1rem;
	height: 22rem;
}

.overlay {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background-color: rgba(0, 0, 0, 0.8);
	overflow: hidden;
	width: 100%;
	height: 100%;
	transform: scale(0);
	transition: 0.3s ease;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.project-in {
	height: 100%;
	width: 100%;
}

.project-in:hover .overlay {
	transform: scale(1);
}

.education {
	margin: 3rem 0rem;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.education h3 {
	margin: 2rem 0rem;
}

.education-row {
	margin: 1rem 0 2rem 0;
	border-radius: 1rem;
	padding: 2rem 2rem 5rem 2rem;
	width: 100%;
}

.education-title {
	margin: 2rem 0rem;
}

.education-content h6 {
	color: rgba(153, 153, 153);
}

@media only screen and (min-width: 768px) {
	.project-div {
		margin-top: 1.5rem;
		margin-bottom: 1.5rem;
		height: 26rem;
	}

	.education-row {
		margin: 1rem 0 2rem 0;
		border-radius: 1rem;
		padding: 2rem;
		width: 100%;
	}
	.education-title {
		margin: 3rem 0rem;
	}
}

